Melhorias na execucao do web

--- a/src/dcc-teste-manager/Configuracao.json
+++ b/src/dcc-teste-manager/Configuracao.json
@@ -4,14 +4,40 @@
       "dev": {
         "processBeginning": {
           "connection-conect-sys": "",
-          "url-compra-plano-completo": "http://wdt012814cps.ciandt.global:1001/ConectCar.VendaTag.WebUi/home/Carrinho?tipoPlano=Completo",
+          "url-compra-plano-completo": "https://dev-loja.conectcar.com/Home/Carrinho?tipoPlano=Completo",
           "url-compra-plano-urbano": "",
           "url-compra-plano-rodovia": "",
           "url-compra-plano-basico": "",
           "url-compra-plano-mundo-iu": "",
           "url-compra-plano-personalite": ""
         },
-        "evidenceFolder": "C:\\Users\\lucas\\source\\repos\\fotos"
+        "evidenceFolder": "C:\\users\\public\\"
+      },
+      "qa": {
+        "processBeginning": {
+          "connection-conect-sys": "",
+          "url-compra-plano-completo": "https://qa-loja.conectcar.com/Home/Carrinho?tipoPlano=Completo",
+          "url-compra-plano-urbano": "",
+          "url-compra-plano-rodovia": "",
+          "url-compra-plano-basico": "",
+          "url-compra-plano-mundo-iu": "",
+          "url-compra-plano-personalite": "",
+          "url-ativacao-plano-completo": "https://qa-cliente.conectcar.com/ativacaotag"
+        },
+        "evidenceFolder": "C:\\users\\public\\"
+      },
+      "homol": {
+        "processBeginning": {
+          "connection-conect-sys": "",
+          "url-compra-plano-completo": "https://homol-loja.conectcar.com/Home/Carrinho?tipoPlano=Completo",
+          "url-compra-plano-urbano": "",
+          "url-compra-plano-rodovia": "",
+          "url-compra-plano-basico": "",
+          "url-compra-plano-mundo-iu": "",
+          "url-compra-plano-personalite": "",
+          "url-ativacao-plano-completo": "https://homol-cliente.conectcar.com/ativacaotag"
+        },
+        "evidenceFolder": "C:\\users\\public\\"
       }
     }
   ]
