--- a/src/dcc-teste-manager/dcc-teste-manager.csproj
+++ b/src/dcc-teste-manager/dcc-teste-manager.csproj
@@ -26,5 +26,7 @@
     </None>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
