--- a/src/Teste.Manager.Application/Teste.Manager.Application.csproj
+++ b/src/Teste.Manager.Application/Teste.Manager.Application.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Appium.WebDriver" Version="4.1.1" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="80.0.3987.10600" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
   <ItemGroup>
