--- a/src/dcc-teste-manager/Configuracao.json
+++ b/src/dcc-teste-manager/Configuracao.json
@@ -4,12 +4,13 @@
       "dev": {
         "processBeginning": {
           "connection-conect-sys": "",
-          "url-compra-plano-completo": "http://wdt012814cps.ciandt.global:1001/ConectCar.VendaTag.WebUi/home/Carrinho?tipoPlano=Completo",
+          "url-compra-plano-completo": "https://qa-loja.conectcar.com/home/Carrinho?tipoPlano=Completo",
           "url-compra-plano-urbano": "",
           "url-compra-plano-rodovia": "",
           "url-compra-plano-basico": "",
           "url-compra-plano-mundo-iu": "",
-          "url-compra-plano-personalite": ""
+          "url-compra-plano-personalite": "",
+          "connection-string-sys": "Server=172.19.25.130;Initial Catalog=Conectcar;User Id=sa;Password=HpcX#T3dv8Gu;Persist Security Info=False"
         },
         "evidenceFolder": "C:\\Users\\lucas\\source\\repos\\fotos"
       }
